--- a/src/pages/home/HomePage.module.css
+++ b/src/pages/home/HomePage.module.css
@@ -1,6 +1,6 @@
 .page-content {
-	width: 1230px;
-	margin-left: auto;
-	margin-right: auto;
+	width: 80%;
+	margin: 0 auto;
 	min-height: 75vh;
+
 }
